// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Discount API stack matches the snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuApiLambda",
      "GuAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "discountapilambdadiscountapiCODEEndpointB74B96D0": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "discountapilambdadiscountapiCODEE1E5C869",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "discountapilambdadiscountapiCODEDeploymentStageCODEDCC6DFA9",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ApiGateway5XXAlarmCDK11905206": {
      "Properties": {
        "ActionsEnabled": false,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":retention-dev",
              ],
            ],
          },
        ],
        "AlarmDescription": "Impact - Discount api returned a 5XX response check the logs for more information: https://eu-west-1.console.aws.amazon.com/cloudwatch/home?region=eu-west-1#logsV2:log-groups/log-group/$252Faws$252Flambda$252Fdiscount-api-PROD. Follow the process in https://docs.google.com/document/d/1_3El3cly9d7u_jPgTcRjLxmdG2e919zCLvmcFCLOYAk/edit",
        "AlarmName": "DISCOUNT-API-CODE Discount-api 5XX response",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "ApiName",
            "Value": "discount-api-CODE",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "5XXError",
        "Namespace": "AWS/ApiGateway",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "BasePathMapping": {
      "Properties": {
        "DomainName": {
          "Ref": "DomainName",
        },
        "RestApiId": {
          "Ref": "discountapilambdadiscountapiCODEE1E5C869",
        },
        "Stage": {
          "Ref": "discountapilambdadiscountapiCODEDeploymentStageCODEDCC6DFA9",
        },
      },
      "Type": "AWS::ApiGateway::BasePathMapping",
    },
    "DNSRecord": {
      "Properties": {
        "HostedZoneId": "Z3KO35ELNWZMSX",
        "Name": "discount-api.code.support.guardianapis.com",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "DomainName",
              "RegionalDomainName",
            ],
          },
        ],
        "TTL": "120",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "DomainName": {
      "Properties": {
        "DomainName": "discount-api.code.support.guardianapis.com",
        "EndpointConfiguration": {
          "Types": [
            "REGIONAL",
          ],
        },
        "RegionalCertificateArn": {
          "Fn::Join": [
            "",
            [
              "arn:aws:acm:eu-west-1:",
              {
                "Ref": "AWS::AccountId",
              },
              ":certificate/b384a6a0-2f54-4874-b99b-96eeff96c009",
            ],
          ],
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::DomainName",
    },
    "S3inlinepolicy3B07399A": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": [
                "arn:aws:s3::*:membership-dist/membership/CODE/discount-api/",
                "arn:aws:s3::*:gu-zuora-catalog/PROD/Zuora-CODE/*",
              ],
            },
            {
              "Action": "s3:PutObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3::*:gu-reader-revenue-logs/CODE/discount-api/*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "S3inlinepolicy3B07399A",
        "Roles": [
          {
            "Ref": "discountapilambdaServiceRole4CB5B1F4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "SecretsManagerpolicy7194A9CE": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "secretsmanager:GetSecretValue",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:secretsmanager:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":secret:CODE/Zuora-OAuth/SupportServiceLambdas-*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "SecretsManagerpolicy7194A9CE",
        "Roles": [
          {
            "Ref": "discountapilambdaServiceRole4CB5B1F4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "discountapilambda972ABED6": {
      "DependsOn": [
        "discountapilambdaServiceRoleDefaultPolicy91B9A9BA",
        "discountapilambdaServiceRole4CB5B1F4",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "membership/CODE/discount-api/discount-api.zip",
        },
        "Description": "A lambda that enables the addition of discounts to existing subscriptions",
        "Environment": {
          "Variables": {
            "APP": "discount-api",
            "App": "discount-api",
            "STACK": "membership",
            "STAGE": "CODE",
            "Stack": "membership",
            "Stage": "CODE",
          },
        },
        "FunctionName": "discount-api-CODE",
        "Handler": "index.handler",
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "discountapilambdaServiceRole4CB5B1F4",
            "Arn",
          ],
        },
        "Runtime": "nodejs18.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "discount-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "discountapilambdaServiceRole4CB5B1F4": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "discount-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "discountapilambdaServiceRoleDefaultPolicy91B9A9BA": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/membership/CODE/discount-api/discount-api.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/discount-api",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/discount-api/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "discountapilambdaServiceRoleDefaultPolicy91B9A9BA",
        "Roles": [
          {
            "Ref": "discountapilambdaServiceRole4CB5B1F4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "discountapilambdadiscountapiCODEANY827A81C0": {
      "Properties": {
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "discountapilambda972ABED6",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "discountapilambdadiscountapiCODEE1E5C869",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "discountapilambdadiscountapiCODEE1E5C869",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "discountapilambdadiscountapiCODEANYApiPermissionTestdiscountapiCODEdiscountapilambdadiscountapiCODED838DA36ANY16D9E550": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "discountapilambda972ABED6",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "discountapilambdadiscountapiCODEE1E5C869",
              },
              "/test-invoke-stage/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "discountapilambdadiscountapiCODEANYApiPermissiondiscountapiCODEdiscountapilambdadiscountapiCODED838DA36ANYCB9FC3A2": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "discountapilambda972ABED6",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "discountapilambdadiscountapiCODEE1E5C869",
              },
              "/",
              {
                "Ref": "discountapilambdadiscountapiCODEDeploymentStageCODEDCC6DFA9",
              },
              "/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "discountapilambdadiscountapiCODEAccountA5347E04": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "discountapilambdadiscountapiCODEE1E5C869",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "discountapilambdadiscountapiCODECloudWatchRoleC5981708",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "discountapilambdadiscountapiCODECloudWatchRoleC5981708": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "discount-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "discountapilambdadiscountapiCODEDeployment15948B741b868ab49ec282f04008c03e43e51ea1": {
      "DependsOn": [
        "discountapilambdadiscountapiCODEproxyANY3023C5CD",
        "discountapilambdadiscountapiCODEproxyDA26EBF1",
        "discountapilambdadiscountapiCODEANY827A81C0",
      ],
      "Properties": {
        "Description": "API Gateway created by CDK",
        "RestApiId": {
          "Ref": "discountapilambdadiscountapiCODEE1E5C869",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "discountapilambdadiscountapiCODEDeploymentStageCODEDCC6DFA9": {
      "DependsOn": [
        "discountapilambdadiscountapiCODEAccountA5347E04",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "discountapilambdadiscountapiCODEDeployment15948B741b868ab49ec282f04008c03e43e51ea1",
        },
        "RestApiId": {
          "Ref": "discountapilambdadiscountapiCODEE1E5C869",
        },
        "StageName": "CODE",
        "Tags": [
          {
            "Key": "App",
            "Value": "discount-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "discountapilambdadiscountapiCODEE1E5C869": {
      "Properties": {
        "ApiKeySourceType": "HEADER",
        "Description": "API Gateway created by CDK",
        "Name": "discount-api-CODE",
        "Tags": [
          {
            "Key": "App",
            "Value": "discount-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "discountapilambdadiscountapiCODEUsagePlanA450E53C": {
      "Properties": {
        "ApiStages": [
          {
            "ApiId": {
              "Ref": "discountapilambdadiscountapiCODEE1E5C869",
            },
            "Stage": {
              "Ref": "discountapilambdadiscountapiCODEDeploymentStageCODEDCC6DFA9",
            },
            "Throttle": {},
          },
        ],
        "Description": "REST endpoints for discount api",
        "Tags": [
          {
            "Key": "App",
            "Value": "discount-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "UsagePlanName": "discount-api-CODE",
      },
      "Type": "AWS::ApiGateway::UsagePlan",
    },
    "discountapilambdadiscountapiCODEUsagePlanUsagePlanKeyResourcediscountapiCODEdiscountapilambdadiscountapiCODEdiscountapikeyCODE79A377D3268125D6": {
      "Properties": {
        "KeyId": {
          "Ref": "discountapilambdadiscountapiCODEdiscountapikeyCODED9ED34AC",
        },
        "KeyType": "API_KEY",
        "UsagePlanId": {
          "Ref": "discountapilambdadiscountapiCODEUsagePlanA450E53C",
        },
      },
      "Type": "AWS::ApiGateway::UsagePlanKey",
    },
    "discountapilambdadiscountapiCODEdiscountapikeyCODED9ED34AC": {
      "Properties": {
        "Enabled": true,
        "Name": "discount-api-key-CODE",
        "StageKeys": [
          {
            "RestApiId": {
              "Ref": "discountapilambdadiscountapiCODEE1E5C869",
            },
            "StageName": {
              "Ref": "discountapilambdadiscountapiCODEDeploymentStageCODEDCC6DFA9",
            },
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "discount-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::ApiKey",
    },
    "discountapilambdadiscountapiCODEproxyANY3023C5CD": {
      "Properties": {
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "discountapilambda972ABED6",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "discountapilambdadiscountapiCODEproxyDA26EBF1",
        },
        "RestApiId": {
          "Ref": "discountapilambdadiscountapiCODEE1E5C869",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "discountapilambdadiscountapiCODEproxyANYApiPermissionTestdiscountapiCODEdiscountapilambdadiscountapiCODED838DA36ANYproxy857B2C35": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "discountapilambda972ABED6",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "discountapilambdadiscountapiCODEE1E5C869",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "discountapilambdadiscountapiCODEproxyANYApiPermissiondiscountapiCODEdiscountapilambdadiscountapiCODED838DA36ANYproxyF796F806": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "discountapilambda972ABED6",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "discountapilambdadiscountapiCODEE1E5C869",
              },
              "/",
              {
                "Ref": "discountapilambdadiscountapiCODEDeploymentStageCODEDCC6DFA9",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "discountapilambdadiscountapiCODEproxyDA26EBF1": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "discountapilambdadiscountapiCODEE1E5C869",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "discountapilambdadiscountapiCODEE1E5C869",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
  },
}
`;

exports[`The Discount API stack matches the snapshot 2`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuApiLambda",
      "GuAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "discountapilambdadiscountapiPRODEndpoint341D3591": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "discountapilambdadiscountapiPROD4E9716BA",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "discountapilambdadiscountapiPRODDeploymentStagePROD7923EEA6",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ApiGateway5XXAlarmCDK11905206": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":retention-dev",
              ],
            ],
          },
        ],
        "AlarmDescription": "Impact - Discount api returned a 5XX response check the logs for more information: https://eu-west-1.console.aws.amazon.com/cloudwatch/home?region=eu-west-1#logsV2:log-groups/log-group/$252Faws$252Flambda$252Fdiscount-api-PROD. Follow the process in https://docs.google.com/document/d/1_3El3cly9d7u_jPgTcRjLxmdG2e919zCLvmcFCLOYAk/edit",
        "AlarmName": "DISCOUNT-API-PROD Discount-api 5XX response",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "ApiName",
            "Value": "discount-api-PROD",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "5XXError",
        "Namespace": "AWS/ApiGateway",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "BasePathMapping": {
      "Properties": {
        "DomainName": {
          "Ref": "DomainName",
        },
        "RestApiId": {
          "Ref": "discountapilambdadiscountapiPROD4E9716BA",
        },
        "Stage": {
          "Ref": "discountapilambdadiscountapiPRODDeploymentStagePROD7923EEA6",
        },
      },
      "Type": "AWS::ApiGateway::BasePathMapping",
    },
    "DNSRecord": {
      "Properties": {
        "HostedZoneId": "Z3KO35ELNWZMSX",
        "Name": "discount-api.support.guardianapis.com",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "DomainName",
              "RegionalDomainName",
            ],
          },
        ],
        "TTL": "120",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "DomainName": {
      "Properties": {
        "DomainName": "discount-api.support.guardianapis.com",
        "EndpointConfiguration": {
          "Types": [
            "REGIONAL",
          ],
        },
        "RegionalCertificateArn": {
          "Fn::Join": [
            "",
            [
              "arn:aws:acm:eu-west-1:",
              {
                "Ref": "AWS::AccountId",
              },
              ":certificate/b384a6a0-2f54-4874-b99b-96eeff96c009",
            ],
          ],
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::DomainName",
    },
    "S3inlinepolicy3B07399A": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": [
                "arn:aws:s3::*:membership-dist/membership/PROD/discount-api/",
                "arn:aws:s3::*:gu-zuora-catalog/PROD/Zuora-PROD/*",
              ],
            },
            {
              "Action": "s3:PutObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3::*:gu-reader-revenue-logs/PROD/discount-api/*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "S3inlinepolicy3B07399A",
        "Roles": [
          {
            "Ref": "discountapilambdaServiceRole4CB5B1F4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "SecretsManagerpolicy7194A9CE": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "secretsmanager:GetSecretValue",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:secretsmanager:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":secret:PROD/Zuora-OAuth/SupportServiceLambdas-*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "SecretsManagerpolicy7194A9CE",
        "Roles": [
          {
            "Ref": "discountapilambdaServiceRole4CB5B1F4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "discountapilambda972ABED6": {
      "DependsOn": [
        "discountapilambdaServiceRoleDefaultPolicy91B9A9BA",
        "discountapilambdaServiceRole4CB5B1F4",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "membership/PROD/discount-api/discount-api.zip",
        },
        "Description": "A lambda that enables the addition of discounts to existing subscriptions",
        "Environment": {
          "Variables": {
            "APP": "discount-api",
            "App": "discount-api",
            "STACK": "membership",
            "STAGE": "PROD",
            "Stack": "membership",
            "Stage": "PROD",
          },
        },
        "FunctionName": "discount-api-PROD",
        "Handler": "index.handler",
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "discountapilambdaServiceRole4CB5B1F4",
            "Arn",
          ],
        },
        "Runtime": "nodejs18.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "discount-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "discountapilambdaServiceRole4CB5B1F4": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "discount-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "discountapilambdaServiceRoleDefaultPolicy91B9A9BA": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/membership/PROD/discount-api/discount-api.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/discount-api",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/discount-api/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "discountapilambdaServiceRoleDefaultPolicy91B9A9BA",
        "Roles": [
          {
            "Ref": "discountapilambdaServiceRole4CB5B1F4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "discountapilambdadiscountapiPROD4E9716BA": {
      "Properties": {
        "ApiKeySourceType": "HEADER",
        "Description": "API Gateway created by CDK",
        "Name": "discount-api-PROD",
        "Tags": [
          {
            "Key": "App",
            "Value": "discount-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "discountapilambdadiscountapiPRODANY1101E911": {
      "Properties": {
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "discountapilambda972ABED6",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "discountapilambdadiscountapiPROD4E9716BA",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "discountapilambdadiscountapiPROD4E9716BA",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "discountapilambdadiscountapiPRODANYApiPermissionTestdiscountapiPRODdiscountapilambdadiscountapiPROD571B732AANY9D5AC707": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "discountapilambda972ABED6",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "discountapilambdadiscountapiPROD4E9716BA",
              },
              "/test-invoke-stage/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "discountapilambdadiscountapiPRODANYApiPermissiondiscountapiPRODdiscountapilambdadiscountapiPROD571B732AANYD38D41FE": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "discountapilambda972ABED6",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "discountapilambdadiscountapiPROD4E9716BA",
              },
              "/",
              {
                "Ref": "discountapilambdadiscountapiPRODDeploymentStagePROD7923EEA6",
              },
              "/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "discountapilambdadiscountapiPRODAccount4DA1D227": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "discountapilambdadiscountapiPROD4E9716BA",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "discountapilambdadiscountapiPRODCloudWatchRole3CC6EB11",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "discountapilambdadiscountapiPRODCloudWatchRole3CC6EB11": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "discount-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "discountapilambdadiscountapiPRODDeploymentF304491Bf7c4b8003729caa5febbf7e71a1bc84f": {
      "DependsOn": [
        "discountapilambdadiscountapiPRODproxyANY177F9076",
        "discountapilambdadiscountapiPRODproxy2CE9F043",
        "discountapilambdadiscountapiPRODANY1101E911",
      ],
      "Properties": {
        "Description": "API Gateway created by CDK",
        "RestApiId": {
          "Ref": "discountapilambdadiscountapiPROD4E9716BA",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "discountapilambdadiscountapiPRODDeploymentStagePROD7923EEA6": {
      "DependsOn": [
        "discountapilambdadiscountapiPRODAccount4DA1D227",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "discountapilambdadiscountapiPRODDeploymentF304491Bf7c4b8003729caa5febbf7e71a1bc84f",
        },
        "RestApiId": {
          "Ref": "discountapilambdadiscountapiPROD4E9716BA",
        },
        "StageName": "PROD",
        "Tags": [
          {
            "Key": "App",
            "Value": "discount-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "discountapilambdadiscountapiPRODUsagePlan2FAE5187": {
      "Properties": {
        "ApiStages": [
          {
            "ApiId": {
              "Ref": "discountapilambdadiscountapiPROD4E9716BA",
            },
            "Stage": {
              "Ref": "discountapilambdadiscountapiPRODDeploymentStagePROD7923EEA6",
            },
            "Throttle": {},
          },
        ],
        "Description": "REST endpoints for discount api",
        "Tags": [
          {
            "Key": "App",
            "Value": "discount-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "UsagePlanName": "discount-api-PROD",
      },
      "Type": "AWS::ApiGateway::UsagePlan",
    },
    "discountapilambdadiscountapiPRODUsagePlanUsagePlanKeyResourcediscountapiPRODdiscountapilambdadiscountapiPRODdiscountapikeyPRODAC63086E69120D8D": {
      "Properties": {
        "KeyId": {
          "Ref": "discountapilambdadiscountapiPRODdiscountapikeyPROD0198BD73",
        },
        "KeyType": "API_KEY",
        "UsagePlanId": {
          "Ref": "discountapilambdadiscountapiPRODUsagePlan2FAE5187",
        },
      },
      "Type": "AWS::ApiGateway::UsagePlanKey",
    },
    "discountapilambdadiscountapiPRODdiscountapikeyPROD0198BD73": {
      "Properties": {
        "Enabled": true,
        "Name": "discount-api-key-PROD",
        "StageKeys": [
          {
            "RestApiId": {
              "Ref": "discountapilambdadiscountapiPROD4E9716BA",
            },
            "StageName": {
              "Ref": "discountapilambdadiscountapiPRODDeploymentStagePROD7923EEA6",
            },
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "discount-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::ApiKey",
    },
    "discountapilambdadiscountapiPRODproxy2CE9F043": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "discountapilambdadiscountapiPROD4E9716BA",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "discountapilambdadiscountapiPROD4E9716BA",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "discountapilambdadiscountapiPRODproxyANY177F9076": {
      "Properties": {
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "discountapilambda972ABED6",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "discountapilambdadiscountapiPRODproxy2CE9F043",
        },
        "RestApiId": {
          "Ref": "discountapilambdadiscountapiPROD4E9716BA",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "discountapilambdadiscountapiPRODproxyANYApiPermissionTestdiscountapiPRODdiscountapilambdadiscountapiPROD571B732AANYproxy0E5E46FA": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "discountapilambda972ABED6",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "discountapilambdadiscountapiPROD4E9716BA",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "discountapilambdadiscountapiPRODproxyANYApiPermissiondiscountapiPRODdiscountapilambdadiscountapiPROD571B732AANYproxy04B39808": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "discountapilambda972ABED6",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "discountapilambdadiscountapiPROD4E9716BA",
              },
              "/",
              {
                "Ref": "discountapilambdadiscountapiPRODDeploymentStagePROD7923EEA6",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
  },
}
`;
